--- a/style.css
+++ b/style.css
@@ -35,16 +35,16 @@
 .add-block__wrapper {
   display: flex;
 }
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
-li,
-h3 {
+.list-item,
+.title {
   list-style: none;
 }
-input,
-button{
+.input,
+.btn{
   outline: none;
 }
 button {
@@ -66,7 +66,7 @@ button:hover {
   flex-grow: 1;
 }
 /* Heading */
-h3,
+.title,
 label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -97,7 +97,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
@@ -136,7 +136,7 @@ li >  input[type="text"] {
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
@@ -146,11 +146,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.list__item_textarea input[type=text] {
+ul .list__item_textarea input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.list__item_textarea label {
+ul .list__item_textarea label {
   display: none;
 }
